--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,9 +1,6 @@
 ---
 
-- name: Example task to deploy a template
-  ansible.builtin.template:
-    src: 'potos.example.j2'
-    dest: '/potos.example'
-    owner: root
-    group: root
-    mode: '0755'
+- name: Ensure openvpn including network manager modules is installed
+  ansible.builtin.apt:
+    name: 'network-manager-openvpn-gnome'
+    state: present
