feat: openvpn handover script

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -4,3 +4,20 @@
   ansible.builtin.apt:
     name: 'network-manager-openvpn-gnome'
     state: present
+
+- name: install vpn conf handover scripts
+  ansible.builtin.copy:
+    src: "{{ item.src }}"
+    dest: "{{ item.dest }}"
+    mode: "{{ item. mode }}"
+  loop:
+    - src: usr/local/bin/activate_vpn
+      dest: /usr/local/bin/activate_vpn
+      mode: 755
+    - src: etc/sudoers.d/potos_openvpn_handover
+      dest: /etc/sudoers.d/potos_openvpn_handover
+      mode: 640
+    - src: usr/local/bin/install_system_vpn
+      dest: /usr/local/bin/install_system_vpn
+      mode: 755
+  when: potos_openvpn_install_user_handover
